--- a/.qtenvrc
+++ b/.qtenvrc
@@ -1,9 +1,9 @@
 [RunModeProfiles]
-run-playback-speed=1
+run-playback-speed=0.29512092266663853
 run-min-playback-speed=0.01
 run-max-playback-speed=100
-run-min-animation-speed=nan
-run-max-animation-speed=nan
+run-min-animation-speed=1.1e-09
+run-max-animation-speed=1.1e-09
 fast-playback-speed=1000
 fast-min-playback-speed=1
 fast-max-playback-speed=1e+06
